--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
     <link rel="stylesheet" href="css/global.css" />
     <link rel="stylesheet" href="css/desktop.css" media="screen and (min-width: 1440px)"  />
+    <link rel="stylesheet" href="css/mobile.css" media="screen and (min-width: 340px) and (max-width: 1439px)" />
 
     <title>Frontend Mentor | Four card feature section</title>
 
